<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.heiderlopes.demoactivityintent.LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        style="@style/input_default"
        android:hint="@string/hint_username"/>

    <EditText
        android:id="@+id/etNome"
        style="@style/input_default"
        android:hint="@string/hint_nome"/>

    <EditText
        android:id="@+id/etSenha"
        style="@style/input_default"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btCriarConta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/criar_conta"/>

</LinearLayout>
