<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.heiderlopes.demoactivityintent.LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        style="@style/input_default"
        android:hint="@string/hint_username"/>

    <EditText
        android:id="@+id/etSenha"
        style="@style/input_default"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btLogar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logar"/>

    <TextView
        android:id="@+id/tvNovoUsuario"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textSize="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sou_novo_usuario"
        android:textColor="@drawable/link_selector"
        android:clickable="true"/>

</LinearLayout>
